# robotics

ex01/: .bashrc  commands.txt  ex01.txt
ex01/name_pkg/: CMakeLists.txt  package.xml
ex01/service_full_name/: package.xml  setup.py
ex01/service_full_name/service_full_name/: client_member_function.py  service_member_function.py
ex02/: pose_speed_x1.yaml  pose_speed_x2.yaml  turtle_cmd_vel_0.mcap
ex03/: CMakeLists.txt  doctor.txt  package.xml
ex03/my_package/: package.xml
ex03/src/: hello.cpp
ex04/: colcon_build.txt  ex04.txt
ex04/turtle_go/: package.xml  setup.cfg  setup.py
ex04/turtle_go/turtle_go/: move_to_goal.py
ex05/: rosnode_info.txt.  rosnode_list.txt
ex05/action_cleaning_robot/: package.xml  setup.py
ex05/action_cleaning_robot/action_cleaning_robot/: cleaning_action_client.py  cleaning_action_server.py
ex05/interface_cleaning_robot/: CMakeLists.txt  package.xml
ex06/: cmd_vel.txt
ex08/: rqt_console.csv  three_turtles.launch
ex10/custom_msg/: CMakeLists.txt  package.xml
ex10/text_to_cmd_vel/: package.xml  setup.py
ex10/text_to_cmd_vel/text_to_cmd_vel/: .turtle_pub.py  turtle_pub.py
